--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-session": "^1.15.2",
     "mongoose": "^4.9.2",
     "passport": "^0.3.2",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
